err/bamtyper.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BamTyper-0.2.6.egg-info'...
Listing './lib/python3.5/site-packages/bamtyper'...
Compiling './lib/python3.5/site-packages/bamtyper/bamtyper.py'...
***   File "./lib/python3.5/site-packages/bamtyper/bamtyper.py", line 87
    print "Could not parse list file:",options.list,exc_info()[0]
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bamtyper/reportGenerator.py'...
***   File "./lib/python3.5/site-packages/bamtyper/reportGenerator.py", line 77
    print contigsFileName, bamFileNames
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bamtyper/test'...
Compiling './lib/python3.5/site-packages/bamtyper/utilities.py'...
***   File "./lib/python3.5/site-packages/bamtyper/utilities.py", line 152
    print "    Parsing BAM '%s' (%d of %d)" % (getBamDescriptor(bf), (bam_count+1), num_bams)
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pysam'...
Listing './lib/python3.5/site-packages/pysam/include'...
Listing './lib/python3.5/site-packages/pysam/include/bcftools'...
Listing './lib/python3.5/site-packages/pysam/include/htslib'...
Listing './lib/python3.5/site-packages/pysam/include/htslib/htslib'...
Listing './lib/python3.5/site-packages/pysam/include/samtools'...
Listing './lib/python3.5/site-packages/pysam/include/samtools/win32'...
Listing './lib/python3.5/site-packages/pysam-0.13.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
